[build-system]
requires = ["hatchling", "incremental"]
build-backend = "hatchling.build"

[project]
name = "Cloudits"
dynamic = ["version"]
dependencies = [
    "incremental>=24.7.2"  
]
maintainers = [
    {name = "Austin Songer", email = "austin@songer.me"}  
]

description = "Your project description"
license = {text = "MIT"}
keywords = ["cloud", "its", "management"]

[tool.hatch.version]
source = "incremental"
