[build-system]
requires = ["hatchling", "incremental"]
build-backend = "hatchling.build"



license = {text = "MIT"}
keywords = ["cloud", "its", "management"]

[project]
name = "Cloudits"
dynamic = ["version"]
description = "Your project description"
readme = "README.md"
license = {text = "Apache 2"}
keywords = ["cloud", "its", "management"]
dependencies = [
     "incremental>=24.7.2"
]
maintainers = [
    {name = "Austin Songer", email = "austin@songer.me"}  
]

[tool.hatch.version]
path = "src/cloudits/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/cloudits",
]

[tool.hatch.version]
source = "incremental"

[tool.incremental]
